add propdeps plugin

--- a/src/gradle/configure_kotlin.gradle
+++ b/src/gradle/configure_kotlin.gradle
@@ -2,10 +2,14 @@ apply plugin: 'kotlin'
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'propdeps'
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile("org.springframework.boot:spring-boot-starter-web:2.0.1.RELEASE")
+
+    kapt "org.springframework.boot:spring-boot-configuration-processor"
+    optional "org.springframework.boot:spring-boot-configuration-processor"
 
 }
 
