--- a/src/build.gradle
+++ b/src/build.gradle
@@ -5,10 +5,15 @@ buildscript {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
+
+        maven {
+            url 'http://repo.spring.io/plugins-release'
+        }
     }
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'io.spring.gradle:propdeps-plugin:0.0.9.RELEASE'
         classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
     }
 }
